--- a/style.css
+++ b/style.css
@@ -111,7 +111,9 @@ a:hover {
 
 .article-text {
   margin: 0 auto;
-  width: 80%;
+  width: 70%;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
 
 @keyframes slideFromLeft {
