--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ header {
   background-color: hsla(212, 100%, 30%, 0.8);
   position: sticky;
   top: 0;
+  z-index: 10;
+}
+
+header::after {
+  height: 10px;
+  background-color: red;
+  box-shadow: 2px 2px 2px black;
 }
 
 #empty-box {
@@ -45,13 +52,6 @@ nav > ul {
   padding-right: 1rem;
 }
 
-.current-page {
-  text-decoration: underline;
-  color: hsl(0, 0%, 20%);
-  font-style: italic;
-  pointer-events: none;
-}
-
 a,
 a:visited {
   text-decoration: none;
@@ -68,6 +68,10 @@ a:hover {
   color: red;
   text-decoration: underline;
   text-shadow: 2px 2px 2px black;
+}
+
+section {
+  min-height: 100svh;
 }
 
 #landing-img {
@@ -143,6 +147,10 @@ footer {
   opacity: 0;
 }
 
+.show {
+  opacity: 1;
+}
+
 @keyframes slideFromLeft {
   0% {
     opacity: 0;
@@ -179,6 +187,12 @@ footer {
 
 @media (prefers-reduced-motion: no-preference) {
   .hidden {
-    transition: all 1s;
+    transform: translateX(-200px);
+    filter: blur(5px);
+    transition: all 5s;
+  }
+  .show {
+    transform: translateX(0);
+    filter: blur(0);
   }
 }
