--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section {
 .article-header {
   font-size: 3em;
   text-align: center;
-  margin: 1rem;
+  margin: 0 auto 2em auto;
 }
 
 .article-text {
@@ -119,13 +119,23 @@ section {
   width: 60%;
   font-size: 1.25em;
   line-height: 1.5;
+  background-color: hsla(212, 100%, 30%, 0.8);
+  color: hsl(0, 0%, 90%);
+  padding: 1em;
+  border-radius: 25px;
+  font-size: 1.25em;
+}
+
+strong {
+  font-style: italic;
+  font-size: 1.25em;
 }
 
 .info {
   font-size: 0.75em;
   font-style: italic;
   margin: 0 auto;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   width: 70%;
 }
 
@@ -158,7 +168,7 @@ footer {
   }
   25% {
     opacity: 0;
-    transform: translateX(-25svw) skew(-10deg) scale(1.05);
+    transform: translateX(-25svw) skew(-20deg) scale(1.05);
     filter: blur(2px);
   }
   100% {
@@ -187,12 +197,12 @@ footer {
 
 @media (prefers-reduced-motion: no-preference) {
   .hidden {
-    transform: translateX(-200px);
+    transform: translateX(-500px) translateY(100px) scale(0.5) skew(-10deg);
     filter: blur(5px);
-    transition: all 5s;
   }
   .show {
-    transform: translateX(0);
+    transform: translateX(0) translateY(0) scale(1) skew(0);
     filter: blur(0);
+    transition: all 1s cubic-bezier(0.55, 0.2, 0.5, 0.95);
   }
 }
